[package]
name = "simulate_schedule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.0"
wutil = { git = "https://github.com/wyhhh/wutil.git"}
rg = {git = "https://github.com/wyhhh/rg"}
crossbeam = "0.8.1"
crossbeam-skiplist_piedb = "0.8.11"
crossbeam-utils = "0.8.8"
crossbeam-epoch = "0.9.8"
crossbeam-channel = "0.5.4"
num_cpus = "1.13.1"
crossterm = "0.23.2"
work-queue = "0.1.3"